--- a/GroupApp/templates/user_post.html
+++ b/GroupApp/templates/user_post.html
@@ -27,22 +27,60 @@
           <!-- Navbar Right Side -->
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="/blog/blog_form">New Post</a>
-            <a class="nav-item nav-link" href="#">Profile</a>
+            <a class="nav-item nav-link" href="/user/{{logged_user.id}}">Profile</a>
             <a class="nav-item nav-link" href="/user/logout">Logout</a>
           </div>
         </div>
       </div>
+      <form class="d-flex" method='POST' action="blog/user/search">
+        {% csrf_token %}
+          <input class="form-control m-2" type="search" Name="searched" aria-label="Search">
+          <button class="btn btn-outline-tertiary" type="submit">Search</button>
+      </form>
     </nav>
   </header>
   <main role="main" class="container">
     <div class="content-section">
-        {{post.title}} Posted by:{{post.user_post.first_name}}
+        <h1>{{post.title}} </h1>
+        {% if post.user_post.id == request.session.logged_user %}<a href="blog/create_post">Update</a> {%endif%}
+        <br>
+        <p>Posted By: <a href="/user/{{post.user_post.id}}">{{post.user_post.first_name}} {{post.user_post.last_name}}</a></p>
         <br>
         {{post.content}}
         <br>
         <img src="{{post.post_image.url}}">
     </div>
-    
+      <div class="content-section">
+        <h3>Users Who Liked this Post</h3>
+        <ul>
+            {% for like in post.liked.all %}
+            <li>{{like.first_name}} {{like.last_name}}</li>
+            {% endfor %}
+        </ul>
+        {% if logged_user in post.liked.all %}
+        <a href="/unlike/{{post.id}}" role="button" class="btn btn-danger">Unlike</a>
+        {% else %}
+        <a href="/like/{{post.id}}" role="button" class="btn btn-warning">Like</a>
+        {% endif %}
+    </div>
+    <div class="content-section">
+      <h4>Comments:</h4>
+      {% for comment in post.comments.all %}
+      <p id="commentDelete"><a href="/user/{{comment.user_comment.id}}">{{comment.user_comment.first_name}}</a> says: {{comment.content}}</p>
+      {% if comment.user_comment.id == request.session.logged_user%}
+      <small id="commentDelete" class="form-text text-muted"><a href="/blog/{{comment.id}}/delete_comment">Delete this comment</a></small>
+      {%endif%}
+      {% endfor %}
+  </div>
+    <div class="content-section">
+      <form action="/blog/add_comment" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="post_comment" value={{post.id}}>
+        
+        <textarea name="content" cols="70" rows="3" style="resize: none;"></textarea>
+        <button>Add Comment</button>
+      </form>
+    </div>
   </main>
   <footer class="page-footer font-small blue pt-4">
     <div class="container-fluid text-center">
